Fixed selector arrow placement in case of right align.

--- a/src/my-date-picker/my-date-picker.component.css
+++ b/src/my-date-picker/my-date-picker.component.css
@@ -117,7 +117,7 @@
 
 .mydp .selectorarrowright:after,
 .mydp .selectorarrowright:before {
-    left: 224px;
+    left: 86%;
 }
 
 .mydp .alignselectorright {
